--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DaTodo">
         <activity
+            android:name=".Controllers.TimerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Controllers.TasksAcvitiy"
+            android:exported="false" />
+        <activity
+            android:name=".Controllers.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Controllers.SignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Controllers.RewardsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Controllers.AddTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".Controllers.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
