12 March - Lucas - Added AllTask Items and Click into AddAllTaskActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DaTodo">
         <activity
+            android:name=".Controllers.AddAllTaskActivity"
+            android:exported="false" />
+        <activity
             android:name=".Controllers.AllTaskActivity"
             android:exported="false" />
         <activity
