--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".Controllers.AllTaskActivity"
             android:exported="false" />
         <activity
-            android:name=".Controllers.PetNamingActivity"
+            android:name=".Controllers.PetCreateActivity"
             android:exported="false" />
         <activity
             android:name=".Controllers.TimerActivity"
