--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.da_todo"
+        applicationId "da.todo.da_todo"
         minSdk 28
         targetSdk 31
         versionCode 1
